# django-mobile-money

./: .coverage  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
django_mobile_money/: __init__.py  apps.py  exceptions.py  models.py  signals.py  urls.py  utils.py  views.py
django_mobile_money/backends/: __init__.py  airtel_money.py  base.py  celtiis_cash.py  cinetpay.py  ecobank.py  free_money.py  moov_money.py  mpesa.py  mtn_momo.py  orange_money.py  sama_money.py  wave.py  wizall_money.py  yas_money.py
django_mobile_money/migrations/: 0001_initial.py
django_mobile_money/templatetags/: mobile_money_tags.py
docs/: requirements.txt
docs/source/: backends.rst  conf.py  contributing.rst  index.rst  installation.rst  models.rst  quickstart.rst  signals.rst  webhooks.rst
sandbox/: db.sqlite3
sandbox/config/: settings.py
tests/: conftest.py  test_airtel.py  test_celtiis.py  test_cinetpay.py  test_ecobank.py  test_free_money.py  test_moov.py  test_mpesa.py  test_mtn.py  test_orange.py  test_sama_money.py  test_utils.py  test_views.py  test_wave.py  test_wizall.py  test_yas.py
