[project]
name = "django-mobile-money"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.4",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "build>=1.4.3",
    "coverage>=7.13.5",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "twine>=6.2.0",
]
