[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-mobile-money"
version = "0.4.0"
description = "Django reusable package for African mobile money payments"
readme = "README.md"
license = "MIT"
authors = [{name = "OURA KONAN ROMEO", email = "romeo.oura@example.com"}]
keywords = ["django", "mobile money", "wave", "orange money", "mtn momo", "moov money", "africa", "payment"]
classifiers = ["Framework :: Django", "Framework :: Django :: 5.0", "Programming Language :: Python :: 3.12"]
requires-python = ">=3.10"
dependencies = ["Django>=4.2", "requests>=2.31"]

[tool.setuptools.packages.find]
include = ["django_mobile_money*"]
exclude = ["sandbox*", "tests*", "docs*"]

[project.urls]
Homepage = "https://github.com/oura02/django-mobile-money"
Repository = "https://github.com/oura02/django-mobile-money"

[tool.pytest.ini_options]
python_files = ["test_*.py"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-django>=4.8", "coverage>=7.0", "build>=1.0", "twine>=5.0"]
